<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">影游记</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_page">首页</string>
    <string name="person">个人</string>
    <string name="settings">设置</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_username">"帐号 "</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_password">密码</string>
    <string name="activity_yingyou">影游活动</string>
    <string name="talent_union">人才联盟</string>
    <string name="game_yingyou">影游大赛</string>
    <string name="good_works">佳作欣赏</string>

</resources>
