<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#33000000"
            android:gravity="center"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/id_main_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom"
                    android:background="#33000000"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/id_main_viewpager_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="这里是滚动图片"
                        android:textColor="#ffffff" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center" >

                        <View
                            android:id="@+id/id_dot0"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:background="@drawable/dot_focused" />

                        <View
                            android:id="@+id/id_dot1"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:background="@drawable/dot_nomal" />

                        <View
                            android:id="@+id/id_dot2"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:background="@drawable/dot_nomal" />

                        <View
                            android:id="@+id/id_dot3"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:background="@drawable/dot_nomal" />

                        <View
                            android:id="@+id/id_dot4"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:background="@drawable/dot_nomal" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" 
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_activity_yingyou"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#5FFFF000"
                        android:drawableLeft="@drawable/btn_activity_yingyou"
                        android:text="@string/activity_yingyou" />

                    <Button
                        android:id="@+id/btn_talent_union"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#5F00FFFF"
                        android:drawableLeft="@drawable/btn_talent_union"
                        android:text="@string/talent_union" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal" >
                    <Button
                        android:id="@+id/btn_game_yingyou"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#5FFF0F00"
                        android:drawableLeft="@drawable/btn_game_yingyou"
                        android:text="@string/game_yingyou" />

                    <Button
                        android:id="@+id/btn_good_works"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#5F00FF00"
                        android:drawableLeft="@drawable/btn_good_works"
                        android:text="@string/good_works" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@id/btn_game_yingyou"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#5FFF0F00"
                        android:drawableLeft="@drawable/btn_game_yingyou"
                        android:text="@string/game_yingyou" />

                    <Button
                        android:id="@id/btn_good_works"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#5F00FF00"
                        android:drawableLeft="@drawable/btn_good_works"
                        android:text="@string/good_works" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>